--- a/lamoon-frontend/public/index.html
+++ b/lamoon-frontend/public/index.html
@@ -24,6 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;400;600&family=Nunito:wght@300;400;600&family=Oleo+Script&display=swap"
+      rel="stylesheet"
+    />
+    <!-- add font  -->
     <title>Lamoon</title>
   </head>
   <body>
